# 8iadt-tc-fase3-assistente-medico

./: .gitignore  README.md  run-local.py
.cursor/: worktrees.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260417_1200_initial_schema.py  20260417_1300_add_exam_attachments.py  9fc83ede69ff_add_alerts_table.py  cfd8b2e731f0_add_exam_attachments_table.py
backend/scripts/: seed_patients.py  update_medication_catalog_from_rename.py
backend/src/assistente_medico_api/: __init__.py  config.py  deps.py  main.py
backend/src/assistente_medico_api/api/: alerts.py  chat.py  cids.py  comorbidities.py  medications.py  patients.py
backend/src/assistente_medico_api/db/: __init__.py  engine.py  session.py
backend/src/assistente_medico_api/graph/: __init__.py  chat_rag.py  state.py
backend/src/assistente_medico_api/graph/nodes/: __init__.py  generate.py  retrieve.py
backend/src/assistente_medico_api/models/: __init__.py  agent_log.py  alert.py  attachment.py  exam.py  patient.py  suggested_item.py
backend/src/assistente_medico_api/repositories/: alert_repo.py  attachment_repo.py  exam_repo.py  patient_repo.py  suggested_item_repo.py
backend/src/assistente_medico_api/schemas/: __init__.py  alerts.py  chat.py  cids.py  comorbidities.py  exams.py  medications.py  patients.py  suggested_items.py
backend/src/assistente_medico_api/services/: alert_service.py  cid_catalog.py  medication_catalog.py  patient_service.py  protocol_map.py
backend/tests/: conftest.py  test_alerts_endpoint_contract.py  test_chat_endpoint_contract.py  test_cids_endpoint_contract.py  test_comorbidities_endpoint_contract.py  test_decision_flow_endpoint_contract.py  test_exams_endpoint_contract.py  test_generate_node_behavior.py  test_graph_async_contract.py  test_medications_endpoint_contract.py  test_patients_endpoint_contract.py  test_suggested_items_endpoint_contract.py
llm/: README.md  fine-tuning.md  pyproject.toml
llm/scripts/: example_vectorstore_rag_query.py
llm/src/pcdt_ingest/: __init__.py  chunk.py  cli_chunk.py  cli_embed.py  cli_exams.py  cli_extract.py  cli_pcdt.py  cli_view_pcdt_chunks.py  embed.py  exams_fetch.py  extract.py  graph.py  http_client.py  logutil.py  manifest.py  paths.py  pcdt_download.py  pcdt_filters.py  state.py  tools.py
llm/tests/: test_embed.py
llm/tools/pcdt-chunks-viewer/: index.html
(+77 files in other folders)
