[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistente-medico-llm"
version = "0.1.0"
description = "Ingestão CONITEC PCDT (listagem em tabela) e dados tabulares (Einstein) para RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.41"]
tabular = ["pandas>=2.0", "openpyxl>=3.1"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
download-pcdt = "pcdt_ingest.cli_pcdt:main"
download-clinical-exams = "pcdt_ingest.cli_exams:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
